--- a/Universitas Permata Hati/Kontak.html
+++ b/Universitas Permata Hati/Kontak.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width , initial-scale=1.0">
-    <title>Universitas Permata Hati</title>
+    <title>Kontak - Universitas Permata Hati</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="Gambar/institution.png">
 </head>
 <body>
     <section class="header">
@@ -33,9 +34,7 @@
                     <hr>
                     <p>
                         <b>Alamat : </b> <br>
-                        Jl. Ir. H. Juanda KM.03 Singaraja, <br>
-                        Indramayu – Jawa Barat 45213 <br>
-                        Telephone: 0234-275946
+                        JI Tanjung Duren Barat II No 1 Grogol Jakarta Barat. <br> No.Telp: 021-21194454
                     </p>
                     <hr>
                     <p>
@@ -51,7 +50,7 @@
                 </div>
                 <div class="con-col">
                     <h3>Maps</h3>
-                    <img src="Gambar/Maps.png" alt="">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.6630675031915!2d106.78043597595803!3d-6.175840860519346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f7c264998871%3A0x25224ba2f2443f47!2sUniversitas%20Dian%20Nusantara%20Kampus%20Tanjung%20Duren!5e0!3m2!1sen!2sid!4v1684131156985!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 <div class="con-col">
                     <h3>Partners</h3>
@@ -61,5 +60,10 @@
             </div>
         </div>
     </section>
+    <div id="copyright">
+        <div class="wrapper">
+            &copy; 2023, <b>Michail</b> All Rights Reserved
+        </div>
+    </div>
 </body>
 </html>
