--- a/Universitas Permata Hati/Organisasi.html
+++ b/Universitas Permata Hati/Organisasi.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width , initial-scale=1.0">
-    <title>Universitas Permata Hati</title>
+    <title>Struktur Organisasi - Universitas Permata Hati</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="Gambar/institution.png">
 </head>
 <body>
     <section class="header">
@@ -34,36 +35,47 @@
 
     <section class="visi">
         <h1>Struktur Organisasi</h1>
-        <div class="row">
-            <div class="visi-col">
-                <h3>Misi</h3>
-                <p>
-                    <ol>
-                        <li>Menyelenggarakan pendidikan dan pengajaran yang bermutu</li>
-                        <li>Melaksanakan kegiatan penelitian guna mengembangkan ilmu pengetahuan dan teknologi yang memiliki kemanfaatan baik bagi kepentingan institusi, daerah maupun nasional</li>
-                        <li>Melaksanakan pengabdian kepada masyarakat dalam berbagai bidang baik tingkat daerah maupun nasional</li>
-                        <li>Meningkatkan suasana dan prilaku akademis, agamis dan kebangsaan dilingkungan Universitas</li>
-                        <li>Menjunjung tinggi budaya, tata krama dan bahasa masyarakat lingkungan</li>
-                    </ol>
-                </p>
+        <div class="org-center">
+            <div class="org-col">
+                <img src="https://undira.ac.id/assets/image/people1.png" alt="">
+                <h3>Prof. Suharyadi</h3>
+                <p>Rektor Universitas Permata Hati</p>
             </div>
-            <div class="visi-col">
-                <h3>Tujuan</h3>
-                <p>
-                    <ol>
-                        <li>Menghasilkan lulusan yang unggul dan kompetitif pada berbagai bidang ilmu pengetahuan dan teknologi melalui pendidikan dan pengajaran yang bermutu</li>
-                        <li>Menghasilkan ilmu pengetahuan dan teknologi melalui penelitian yang memperhatikan dan menerapkan nilai humaniora agar memiliki kemanfaatan bagi kemajuan institusi, Daerah maupun Nasional</li>
-                        <li>Terwujudnya pengabdian kepada masyarakat dalam berbagai bidang berbasis penalaran dan karya penelitian yang bermanfaat dalam memajukan kesejahteraan umum dan mencerdaskan kehidupan bangsa baik pada tingkat Daerah maupun Nasional</li>
-                        <li>Terwujudnya suasana dan prilaku akademis, agamis dan kebangsaan dilingkungan Universitas</li>
-                        <li>Terwujudnya budaya, tata krama dan bahasa masyarakat lingkungan</li>
-                    </ol>
-                </p>
+        </div>
+        <div class="organ">
+            <div class="org-col">
+                <img src="https://undira.ac.id/assets/image/people2.png" alt="">
+                <h3>Ir. Margono Sugeng, Msc</h3>
+                <p>Wakil Rektor I Bidang Akademik</p>
             </div>
-            <div class="visi-col">
-                <h3>Sasaran</h3>
-                <p>Sasaran yang ingin dicapai UPH adalah menjadi universitas yang unggul dan kompetitif dalam pengembangan ilmu pengetahuan dan teknologi yangf dilandasi nilai-nilai ketuhanan, kebangsaan, dan kearifan lokal, sehingga mampu mempersiapkan lulusan yang memiliki ahlak muliah, memiliki semangat  kebangsaan, berkepribadian, mandiri, memiliki kualitas kemampuan akadmeik, profesional, dapat mengimplementasikan ilmu pengetahuan dan teknologi, secara cerdas, kreatif, terampil, produktif, berdisiplin, dan bertanggungjawab, serta berorientasi masa depan. pengertian unggul dan kompetitif ini ditujukan pada peningkatan kualitas pendidikan, penelitian dan pengabdian kepada masyarakat serta mencakup kualitas dosen dan lulusan yang diakui oleh pemangku kepentingan.</p>
+            <div class="org-col">
+                <img src="https://undira.ac.id/assets/image/people3a.jpg" alt="">
+                <h3>Dwi Sapto Febriantaka, MBA</h3>
+                <p>Wakil Rektor II Bidang Keuangan</p>
+            </div>
+            <div class="org-col">
+                <img src="https://undira.ac.id/assets/image/people4.png" alt="">
+                <h3>Ir. Hasanuddin Thoyieb, MM.</h3>
+                <p>Wakil Rektor III Non Akademik</p>
+            </div>
+        </div>
+        <div class="organ">
+            <div class="org-col">
+                <img src="https://undira.ac.id/assets/image/people2.png" alt="">
+                <h3>Ir. Margono Sugeng, Msc</h3>
+                <p>Dekan FEB</p>
+            </div>
+            <div class="org-col">
+                <img src="https://undira.ac.id/assets/image/people6.png" alt="">
+                <h3>Dr. Ari Purwanti, M.Ak., CA., CSRA.</h3>
+                <p>Dekan FISB</p>
             </div>
         </div>
     </section>
+    <div id="copyright">
+        <div class="wrapper">
+            &copy; 2023, <b>Michail</b> All Rights Reserved
+        </div>
+    </div>
 </body>
 </html>
