--- a/Universitas Permata Hati/Profile.html
+++ b/Universitas Permata Hati/Profile.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width , initial-scale=1.0">
-    <title>Universitas Permata Hati</title>
+    <title>Profile - Universitas Permata Hati</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="Gambar/institution.png">
 </head>
 <body>
     <section class="header">
@@ -35,26 +36,35 @@
 
     <section class="visi">
         <h1>PROGRAM SARJANA (S1)</h1>
+        <p>Program Sarjana merupakan program pendidikan Jenjang S1 yang dapat dijadikan pilihan awal bagi siswa yang telah menyelesaikan studi di sekolah menengah atas. Dengan beban 144 SKS, program studi ini dapat ditempuh dalam waktu minimal 7 semester. Terdapat 3 pilihan program sarjana: Sarjana Reguler, Sarjana Ekstensi, dan Sarjana Internasional.</p>
         <div class="sajana">
-            <div class="visi-col">
-                <h3>FAKULTAS EKONOMI</h3>
+            <div class="profile-col">
+                <h3>FAKULTAS EKONOMI & BISNIS</h3>
                 <p>
-                    <ol>
-                        <li>Program Studi Manajemen</li>
-                        <li>Program Studi Akuntansi/li>
-                    </ol>
+                    Fakultas ekonomi dan bisnis merupakan salah satu bidang keilmuan tertua yang hampir selalu ada di setiap perguruan tinggi terutama dalam lingkup universitas. Keilmuan dasar dalam bidang ini adalah ekonomi, bisnis, keuangan, dan manajemen dimana biasanya akan terpecah kedalam beberapa program studi yang lebih spesifik sesuai dengan peminatan. Beberapa jurusan di fakultas ekonomi dan bisnis, yaitu: <br>
                 </p>
+                <ol class="myol">
+                    <li>Program Studi Manajemen <br> Ilmu yang mempelajari tentang bagaimana mengatur, mengelola, merencanakan, serta membagi tugas untuk mencapai tujuan atau target dari perusahaan. </li>
+                    <li>Program Studi Akuntansi <br> Bidang studi yang mempelajari materi terkait metode pencatatan dan penyusunan laporan keuangan yang berguna membantu pemangku kepentingan dalam proses pengambilan keputusan. </li>
+                </ol>
             </div>
-            <div class="visi-col">
-                <h3>FAKULTAS ILMU BAHASA</h3>
+            <div class="profile-col">
+                <h3>FAKULTAS ILMU SASTRA & BAHASA ASING</h3>
                 <p>
-                    <ol>
-                        <li>Program Studi Bahasa Inggris</li>
-                        <li>Program Studi Bahasa Mandarin</li>                        
-                    </ol>
+                    Sastra & Bahasa Asing merupakan bidang ilmu yang mempelajari sastra dan bahasa negara-negara di dunia, antara lain Inggris, Jepang, Korea, Cina, Perancis, Belanda, Jerman, Rusia, Arab, dan sebagainya. Di jurusan ini, kamu juga akan melakukan kajian terhadap kebudayaan, sejarah, maupun perekonomian negara-negara tersebut. Beberapa jurusan di fakultas Ilmu Sastra & Bahasa Asing, yaitu: <br>
                 </p>
+                <ol class="myol">
+                    <li>Program Studi Bahasa Inggris <br> Salah satu jurusan yang ada di dalam suatu universitas yang di mana hampir semua mata kuliahnya berisi tentang keguruan bahasa Inggris. </li>
+                    <li>Program Studi Bahasa Mandarin <br> Jurusan yang mempelajari kompetensi utama di bidang kebahasaan Cina, sastra, budaya, dan penerjemahan, serta kompetensi pendukung di bidang pariwisata, diplomasi, kajian budaya, dan kewirausahaan. </li>                        
+                </ol>
             </div>
         </div>
     </section>
+
+    <div id="copyright">
+        <div class="wrapper">
+            &copy; 2023, <b>Michail</b> All Rights Reserved
+        </div>
+    </div>
 </body>
 </html>
