--- a/Universitas Permata Hati/index.html
+++ b/Universitas Permata Hati/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="Gambar/institution.png">
 </head>
 <body>
     <section class="header">
@@ -67,5 +68,10 @@
             </div>
         </div>
     </section>
+    <div id="copyright">
+        <div class="wrapper">
+            &copy; 2023, <b>Michail</b> All Rights Reserved
+        </div>
+    </div>
 </body>
 </html>
